--- a/_includes/feature-article.html
+++ b/_includes/feature-article.html
@@ -5,7 +5,16 @@
         <div class="module_img module__visual">
             <a href="{{ site.baseurl }}{{ feature.url }}" class="image-link">
                 <span class="sr-only"> {{ feature.title }}A short message that displays module title</span> 
-                <img class="module_image"  src="{{ site.baseurl}}/{{ site.image-path }}/{{ feature.images.path }}" alt=" {{ feature.images.caption }} ">
+                <img class="module_image feature-img"  
+                     src="{{ site.baseurl}}/{{ site.image-path }}/{{ feature.images.path }}"
+                     data-src="{{ site.url}}/{{ site.image-path }}{{ latest.images.path}}" 
+                     data-srcset=" {{ site.url}}/{{ site.image-path }}{{ latest.images.path}} 125w,
+                                    {{ site.url}}/{{ site.image-path }}{{ latest.images.path}} 150w,
+                                    {{ site.url}}/{{ site.image-path }}{{ latest.images.path}} 250w,
+                                    {{ site.url}}/{{ site.image-path }}{{ latest.images.path}} 300vw,
+                                    {{ site.url}}/{{ site.image-path }}{{ latest.images.path}} 400vw"
+                     sizes="(min-width: 64em) 220x, (min-width: 48em) 150px, 125px" 
+                     alt=" {{ feature.images.caption }} ">
                 <div class="overlay"></div>
             </a>
             <a href="#" class="type">{{ feature.tag[0] }}</a>
