--- a/_sass/pages/about.scss
+++ b/_sass/pages/about.scss
@@ -252,10 +252,13 @@
         .tier-image{
             padding-bottom: 100%;
             position: relative;
+            border: 3.5px solid $color-accent;
+            border-radius: 50%;
 
             .member-image{
                 width: 100%;
                 height: 100%;
+                padding: 10px;
                 position: absolute;
                 left: 0;
                 top: 0;
